workflow/rules/prediction/.snakemake/log/2021-06-22T161806.660675.snakemake.log
Full Traceback (most recent call last):
  File "/home/fernando/mambaforge/envs/snakemake-tutorial-ml/lib/python3.8/site-packages/snakemake/__init__.py", line 599, in snakemake
    workflow.include(
  File "/home/fernando/mambaforge/envs/snakemake-tutorial-ml/lib/python3.8/site-packages/snakemake/workflow.py", line 1155, in include
    exec(compile(code, snakefile, "exec"), self.globals)
  File "/mnt/c/Users/Fernando/Documents/MRes Biomedical Research/Project 2/Github/BenchmarkDR/workflow/rules/prediction/Snakefile", line 16
    
    ^
SyntaxError: positional argument follows keyword argument

SyntaxError in line 10 of /mnt/c/Users/Fernando/Documents/MRes Biomedical Research/Project 2/Github/BenchmarkDR/workflow/rules/prediction/Snakefile:
positional argument follows keyword argument
